# isso

./: .gitignore  Dockerfile  Makefile  package.json  pyproject.toml
isso/css/: isso.css
isso/js/: embed.js
isso/js/app/: dom.js  isso.js  svg.js
isso/js/app/i18n/: en.js
isso/js/app/templates/: comment.js  postbox.js
